# game-music-tagging

./: README.md
libgmtag/: .clang-format  README.md  meson.build
libgmtag.nim/: .gitignore  README.md  config.nims  libgmtag.nimble
libgmtag.nim/src/: datatypes.nim  libgmtag.nim
libgmtag.nim/tests/: test1.nim
libgmtag.nim/tests/samples/: katakis_3d.m3u  spectest.m3u  weird.m3u
libgmtag/include/: libgmtag.h  libgmtag.hpp  test_suite.h
libgmtag/include/tests/: test_suite_2.h
libgmtag/src/: libgmtag.cpp  test.c  test.cpp  test_suite.c
libgmtag/src/private/: getters.cpp  getters.hpp  gmtag.hpp  setters.cpp  setters.hpp  utils.cpp  utils.hpp
libgmtag/src/tests/: fuzz.c  sample_data.h  test.c  test_suite_1.c  test_suite_2.c
libgmtag/test_rip/: !tags.m3u  gbstest.gbs
references/: gd3.md  gme1.txt  nsf2.md  nsfe.md  sid-songlengths.txt  snsf.txt  spc-rsn.md
